<resources>
    <string name="app_name">ISS</string>
    <string name="no_name">佚名</string>
    <string name="string_rating">评分：</string>
    <string name="string_rating_num">人评分</string>
    <string name="string_type">类型：</string>

    <string name="listview_header_hint_normal">下拉刷新...</string>
    <string name="listview_header_hint_release">释放刷新...</string>
    <string name="listview_loading">努力加载中...</string>
    <string name="nomore_loading">没有更多内容了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成...</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <!-- 添加新人员-->、
    <string name="name_hint">请输入姓名</string>
    <string name="telephone_hint">请输入手机号</string>
    <string name="weChat_hint">请输入微信号</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="store_hint">请输入公司名称</string>
    <string name="position_hint">请输入职位</string>
    <string name="hangye_hint">请输入行业</string>
</resources>
